kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: app
    spec:
      containers:
        - name: app
          image: ghcr.io/remla25-team7/app:release
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
              protocol: TCP
          volumeMounts:
            - mountPath: /var/log/app
              name: app-logs
      restartPolicy: Always
      volumes:
        - name: app-logs
          emptyDir: {}
