kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
    - host: model.local
      http:
        paths:
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: model-service
                port:
                  number: 8080
